; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/openmaxil/extr_mmalomx_parameters.c_mmalomx_set_video_param.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/mmal/openmaxil/extr_mmalomx_parameters.c_mmalomx_set_video_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_17__ = type { %struct.TYPE_18__* }
%struct.TYPE_18__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { i32 }
%struct.TYPE_16__ = type { i32, %struct.TYPE_14__*, %struct.TYPE_11__, %struct.TYPE_15__ }
%struct.TYPE_14__ = type { i64, i64 }
%struct.TYPE_11__ = type { %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i64, i64 }
%struct.TYPE_15__ = type { i32, i32 }

@MMAL_PARAMETER_PROFILE = common dso_local global i32 0, align 4
@MMAL_PARAMETER_INTRAPERIOD = common dso_local global i32 0, align 4
@MMAL_SUCCESS = common dso_local global i64 0, align 8
@OMX_ErrorBadParameter = common dso_local global i32 0, align 4
@OMX_ErrorNone = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_17__*, i32, i32, i32)* @mmalomx_set_video_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mmalomx_set_video_param(%struct.TYPE_17__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_17__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_16__, align 8
  %11 = alloca i32, align 4
  store %struct.TYPE_17__* %0, %struct.TYPE_17__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 0
  %13 = load i32, i32* @MMAL_PARAMETER_PROFILE, align 4
  store i32 %13, i32* %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 1
  store %struct.TYPE_14__* null, %struct.TYPE_14__** %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 2
  %16 = bitcast %struct.TYPE_11__* %15 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %16, i8 0, i64 16, i1 false)
  %17 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 3
  %18 = bitcast %struct.TYPE_15__* %17 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %18, i8 0, i64 8, i1 false)
  %19 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_18__*, %struct.TYPE_18__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_13__*, %struct.TYPE_13__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @mmalil_encoding_to_omx_video_coding(i32 %25)
  store i32 %26, i32* %11, align 4
  %27 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_18__*, %struct.TYPE_18__** %28, align 8
  %30 = load i32, i32* @MMAL_PARAMETER_INTRAPERIOD, align 4
  %31 = load i32, i32* %9, align 4
  %32 = call i64 @mmal_port_parameter_set_uint32(%struct.TYPE_18__* %29, i32 %30, i32 %31)
  %33 = load i64, i64* @MMAL_SUCCESS, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %4
  %36 = load i32, i32* @OMX_ErrorBadParameter, align 4
  store i32 %36, i32* %5, align 4
  br label %63

37:                                               ; preds = %4
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %11, align 4
  %40 = call i64 @mmalil_omx_video_profile_to_mmal(i32 %38, i32 %39)
  %41 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 1
  %42 = load %struct.TYPE_14__*, %struct.TYPE_14__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %42, i64 0
  %44 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %43, i32 0, i32 1
  store i64 %40, i64* %44, align 8
  %45 = load i32, i32* %8, align 4
  %46 = load i32, i32* %11, align 4
  %47 = call i64 @mmalil_omx_video_level_to_mmal(i32 %45, i32 %46)
  %48 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 1
  %49 = load %struct.TYPE_14__*, %struct.TYPE_14__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %49, i64 0
  %51 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %50, i32 0, i32 0
  store i64 %47, i64* %51, align 8
  %52 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %53 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %52, i32 0, i32 0
  %54 = load %struct.TYPE_18__*, %struct.TYPE_18__** %53, align 8
  %55 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 0
  %56 = call i64 @mmal_port_parameter_set(%struct.TYPE_18__* %54, i32* %55)
  %57 = load i64, i64* @MMAL_SUCCESS, align 8
  %58 = icmp ne i64 %56, %57
  br i1 %58, label %59, label %61

59:                                               ; preds = %37
  %60 = load i32, i32* @OMX_ErrorBadParameter, align 4
  store i32 %60, i32* %5, align 4
  br label %63

61:                                               ; preds = %37
  %62 = load i32, i32* @OMX_ErrorNone, align 4
  store i32 %62, i32* %5, align 4
  br label %63

63:                                               ; preds = %61, %59, %35
  %64 = load i32, i32* %5, align 4
  ret i32 %64
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @mmalil_encoding_to_omx_video_coding(i32) #2

declare dso_local i64 @mmal_port_parameter_set_uint32(%struct.TYPE_18__*, i32, i32) #2

declare dso_local i64 @mmalil_omx_video_profile_to_mmal(i32, i32) #2

declare dso_local i64 @mmalil_omx_video_level_to_mmal(i32, i32) #2

declare dso_local i64 @mmal_port_parameter_set(%struct.TYPE_18__*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
